[package]
name = "disc-riider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
cbc = "0.1.2"
binrw = "0.10.0"
encoding_rs = "0.8.31"
thiserror = "1.0.32"
sha1 = "0.10.1"

[workspace]
members = [".", "./iso-tool"]
