[package]
name = "disc-riider-py"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "disc_riider_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
disc_riider = { path = ".." }
binrw = "0.14.0"
sha1 = "0.10.5"
hex = "0.4.3"
